website/versioned_docs/version-2.3.0/react-native.md
---
id: version-2.3.0-react-native
title: react-native package
hide_title: true
original_id: react-native
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## react-native package

## Classes

|  Class | Description |
|  --- | --- |
|  [AuthContainer](./react-native.authcontainer.md) | Skygear Auth APIs. |
|  [BaseAPIClient](./react-native.baseapiclient.md) |  |
|  [Container](./react-native.container.md) | Skygear APIs container. |
|  [GlobalJSONContainerStorage](./react-native.globaljsoncontainerstorage.md) |  |
|  [ImageProcessingPipelineBuilder](./react-native.imageprocessingpipelinebuilder.md) | Image processing pipeline builder. |
|  [MFAContainer](./react-native.mfacontainer.md) | Skygear Auth Multi-Factor-Authentication APIs. |
|  [OIDCContainer](./react-native.oidccontainer.md) | Skygear Auth OIDC client APIs. |
|  [ReactNativeAPIClient](./react-native.reactnativeapiclient.md) |  |
|  [ReactNativeAssetContainer](./react-native.reactnativeassetcontainer.md) | Skygear Asset APIs (for React Native). |
|  [ReactNativeAsyncStorageStorageDriver](./react-native.reactnativeasyncstoragestoragedriver.md) |  |
|  [ReactNativeAuthContainer](./react-native.reactnativeauthcontainer.md) | Skygear Auth APIs (for React Native). |
|  [ReactNativeContainer](./react-native.reactnativecontainer.md) | Skygear APIs container (for React Native). |
|  [ReactNativeOIDCContainer](./react-native.reactnativeoidccontainer.md) | Skygear OIDC APIs (for React Native). |
|  [SkygearError](./react-native.skygearerror.md) | Skygear API error. |

## Functions

|  Function | Description |
|  --- | --- |
|  [addAppleIDCredentialRevokedListener(listener)](./react-native.addappleidcredentialrevokedlistener.md) |  |
|  [decodeAuthenticator(a)](./react-native.decodeauthenticator.md) |  |
|  [decodeAuthResponse(r)](./react-native.decodeauthresponse.md) |  |
|  [decodeError(err)](./react-native.decodeerror.md) |  |
|  [decodeIdentity(i)](./react-native.decodeidentity.md) |  |
|  [decodeQuery(query)](./react-native.decodequery.md) |  |
|  [decodeQueryComponent(s)](./react-native.decodequerycomponent.md) |  |
|  [decodeSession(s)](./react-native.decodesession.md) |  |
|  [decodeUser(u)](./react-native.decodeuser.md) |  |
|  [encodeIdentity(i)](./react-native.encodeidentity.md) |  |
|  [encodeQuery(query)](./react-native.encodequery.md) |  |
|  [encodeQueryComponent(s)](./react-native.encodequerycomponent.md) |  |
|  [encodeUser(u)](./react-native.encodeuser.md) |  |
|  [generateOTPAuthURI(options)](./react-native.generateotpauthuri.md) |  |
|  [getCredentialStateForUserID(userID)](./react-native.getcredentialstateforuserid.md) |  |
|  [isMFARequiredError(e)](./react-native.ismfarequirederror.md) | Check if the provided error indicates Multi-Factor-Authentication is required during authentication. |
|  [isValidationError(err)](./react-native.isvalidationerror.md) | Check if the provided error indicates the server failed to validate input parameters to API. |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [ActivateOOBResult](./react-native.activateoobresult.md) |  |
|  [ActivateTOTPResult](./react-native.activatetotpresult.md) |  |
|  [AuthenticateWithOOBOptions](./react-native.authenticatewithooboptions.md) |  |
|  [AuthenticateWithTOTPOptions](./react-native.authenticatewithtotpoptions.md) |  |
|  [AuthenticationSession](./react-native.authenticationsession.md) |  |
|  [AuthorizeOptions](./react-native.authorizeoptions.md) | Auth UI authorization options |
|  [AuthResponse](./react-native.authresponse.md) |  |
|  [ByteArray](./react-native.bytearray.md) |  |
|  [ConfigureOptions](./react-native.configureoptions.md) |  |
|  [ContainerOptions](./react-native.containeroptions.md) |  |
|  [ContainerStorage](./react-native.containerstorage.md) |  |
|  [CreateNewOOBEmailOptions](./react-native.createnewoobemailoptions.md) |  |
|  [CreateNewOOBResult](./react-native.createnewoobresult.md) |  |
|  [CreateNewOOBSMSOptions](./react-native.createnewoobsmsoptions.md) |  |
|  [CreateNewTOTPOptions](./react-native.createnewtotpoptions.md) |  |
|  [CreateNewTOTPResult](./react-native.createnewtotpresult.md) |  |
|  [CustomTokenIdentity](./react-native.customtokenidentity.md) |  |
|  [ExtraSessionInfoOptions](./react-native.extrasessioninfooptions.md) |  |
|  [GenerateOTPAuthURIOptions](./react-native.generateotpauthurioptions.md) |  |
|  [ImageProcessingPipelineBuilderResizeOptions](./react-native.imageprocessingpipelinebuilderresizeoptions.md) |  |
|  [OAuthError](./react-native.oautherror.md) | OAuthError represents the oauth error response. https://tools.ietf.org/html/rfc6749\#section-4.1.2.1 |
|  [OAuthIdentity](./react-native.oauthidentity.md) |  |
|  [OAuthManualAuthorizationURLOptions](./react-native.oauthmanualauthorizationurloptions.md) |  |
|  [OAuthMobileAppAuthorizationURLOptions](./react-native.oauthmobileappauthorizationurloptions.md) |  |
|  [OAuthWebPopupAuthorizationURLOptions](./react-native.oauthwebpopupauthorizationurloptions.md) |  |
|  [OAuthWebRedirectAuthorizationURLOptions](./react-native.oauthwebredirectauthorizationurloptions.md) |  |
|  [OOBEmailAuthenticator](./react-native.oobemailauthenticator.md) |  |
|  [OOBSMSAuthenticator](./react-native.oobsmsauthenticator.md) |  |
|  [PasswordIdentity](./react-native.passwordidentity.md) |  |
|  [Session](./react-native.session.md) |  |
|  [SessionUserAgent](./react-native.sessionuseragent.md) |  |
|  [SSOLoginOptions](./react-native.ssologinoptions.md) |  |
|  [StorageDriver](./react-native.storagedriver.md) |  |
|  [TOTPAuthenticator](./react-native.totpauthenticator.md) |  |
|  [UploadAssetOptions](./react-native.uploadassetoptions.md) |  |
|  [User](./react-native.user.md) |  |
|  [ValidationError](./react-native.validationerror.md) |  |
|  [ValidationErrorCauseBase](./react-native.validationerrorcausebase.md) |  |
|  [ValidationErrorExpectationDetails](./react-native.validationerrorexpectationdetails.md) |  |
|  [ValidationErrorFormatDetails](./react-native.validationerrorformatdetails.md) |  |
|  [ValidationErrorRangeDetails](./react-native.validationerrorrangedetails.md) |  |

## Variables

|  Variable | Description |
|  --- | --- |
|  [defaultContainer](./react-native.defaultcontainer.md) | Default Skygear APIs container. |
|  [SkygearErrorNames](./react-native.skygearerrornames.md) |  |
|  [ValidationErrorKinds](./react-native.validationerrorkinds.md) |  |
|  [VERSION](./react-native.version.md) |  |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [Authenticator](./react-native.authenticator.md) |  |
|  [CreateNewOOBOptions](./react-native.createnewooboptions.md) |  |
|  [FullOAuthAuthorizationURLOptions](./react-native.fulloauthauthorizationurloptions.md) |  |
|  [Identity](./react-native.identity.md) |  |
|  [JSONObject](./react-native.jsonobject.md) |  |
|  [JSONValue](./react-native.jsonvalue.md) |  |
|  [OAuthAuthorizationURLOptions](./react-native.oauthauthorizationurloptions.md) |  |
|  [SkygearErrorName](./react-native.skygearerrorname.md) |  |
|  [ValidationErrorCause](./react-native.validationerrorcause.md) |  |
|  [ValidationErrorKind](./react-native.validationerrorkind.md) |  |
|  [ValidationInvalidConstantCause](./react-native.validationinvalidconstantcause.md) |  |
|  [ValidationInvalidEntryAmountCause](./react-native.validationinvalidentryamountcause.md) |  |
|  [ValidationInvalidEnumCause](./react-native.validationinvalidenumcause.md) |  |
|  [ValidationInvalidNumberRangeCause](./react-native.validationinvalidnumberrangecause.md) |  |
|  [ValidationInvalidStringFormatCause](./react-native.validationinvalidstringformatcause.md) |  |
|  [ValidationInvalidStringLengthCause](./react-native.validationinvalidstringlengthcause.md) |  |
|  [ValidationInvalidTypeCause](./react-native.validationinvalidtypecause.md) |  |

